Test budget traker
Test budget traker

--- a/es/budget-tracker.html
+++ b/es/budget-tracker.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="../css/font-awesome.css">
     <link rel="stylesheet" href="../css/dics.original.css">
     <link rel="stylesheet" href="../css/bootstrap.css">
-    <link rel="stylesheet" href="../style.css">
+    <!--<link rel="stylesheet" href="../style.css">-->
     <link rel="stylesheet" href="../css/style.competitors.css">
   </head>
 <body>
