--- a/competitors-asana.html
+++ b/competitors-asana.html
@@ -21,28 +21,20 @@
     <link rel="stylesheet" href="css/style.competitors.css">
   </head>
 <body>
-    
-
-
-
 <header class="main_head">
       <div class="container">
         <nav class="navbar navbar-expand-lg">
          <div class="logo">
            <a href="#url"><img src="images/logo.png" alt="Logo Workep"></a>
          </div>
-          <div class="ml-auto"><a href="https://app.workep.com/login" class="signupgoogle">
+           <div class="ml-auto"><a href="https://app.workep.com/login" class="signupgoogle">
           <span class="textdesk">SIGN UP WITH GOOGLE</span>
           <span class="textmob">SIGN UP</span>
-        </a>
-      </div>
         </a>
       </div>
         </nav>
       </div>
 </header>
-
-
 <div class="new-page-body">
     <div class="competitor-sec1 extratop-gap common_gap">
       <div class="container">
@@ -651,10 +643,8 @@
           </div>
         </div>
     </div>
-
 </div>
-
- <footer class="main_footer">
+   <footer class="main_footer">
     <div class="foot_top">
       <div class="container">
         <div class="foot_top_row">
@@ -678,6 +668,15 @@
               <li><a href="https://workep.com/workep-for-education.html">For Education</a></li>
               <li><a href="https://workep.com/downloadapps.html">Download Apps</a></li>
             </ul>
+              <h4>Features</h4>
+            <ul class="links_all">
+                <li><a href="https://workep.com/time-tracker.html">Time traker</a></li>
+                <li><a href="https://workep.com/budget-tracker.html">Budget Traker</a></li>
+                <li><a href="https://workep.com/external-collaboration.html">External Collaboration</a></li>
+                <li><a href="https://workep.com/gantt-chart.html">Gantt Chart</a></li>
+                <li><a href="https://workep.com/voice-notes.html">Voice notes</a></li>
+                <li><a href="https://workep.com/gmail-add-on.html">Gmail Ad-on</a></li>
+            </ul>
           </div>
           <div class="foot3">
             <h4>Workep</h4>
@@ -687,6 +686,18 @@
               <li><a href="https://workep.com/partners.html">Partners</a></li>
               <!--<li><a href="#url">Press Kit</a></li>-->
             </ul>
+            <h4>Competitors</h4>
+            <ul class="links_all">
+                <li><a href="https://workep.com/competitors-airtable.html">Airtable</a></li>
+                <li><a href="https://workep.com/competitors-asana.html">Asana</a></li>
+                <li><a href="https://workep.com/competitors-basecamp.html">Basecamp</a></li>
+                <li><a href="https://workep.com/competitors-jira.html">Jira</a></li>
+                <li><a href="https://workep.com/competitors-monday.html">Monday</a></li>
+                <li><a href="https://workep.com/competitors-notion.html">Notion</a></li>
+                <li><a href="https://workep.com/competitors-smartsheet.html">Smartsheet</a></li>
+                <li><a href="https://workep.com/competitors-trello.html">Trello</a></li>
+                <li><a href="https://workep.com/competitors-wrike.html">Wrike</a></li>
+            </ul>  
           </div>
           <div class="foot4">
             <h4>Resources</h4>
@@ -702,6 +713,14 @@
               <li><a href="https://workep.com/privacy-policy.html">Privacy</a></li>
               <li><a href="https://workep.com/terms.html">Terms of Service</a></li>
             </ul>
+              <h4>Industry</h4>
+            <ul class="links_all">
+                <li><a href="https://workep.com/startups.html">Startup</a></li>
+                <li><a href="https://workep.com/law-firms.html">Law Firms</a></li>
+                <li><a href="https://workep.com/software-dev.html">Developer Dev</a></li>
+                <li><a href="https://workep.com/consulting.html">Consulting</a></li>
+                <li><a href="https://workep.com/marketing.html">Marketing</a></li>
+            </ul>
           </div>
           <div class="foot5">
             <h4>Contact</h4>
@@ -710,6 +729,7 @@
                <li><a href="mailto:service@workep.com?Subject=Hello%20Workep%20Team!"><img src="images/con_ic3.png" alt="E-mail"></a></li>
             </ul>
           </div>
+       
         </div>
       </div>
     </div>
