--- a/competitors-basecamp.html
+++ b/competitors-basecamp.html
@@ -650,7 +650,7 @@
         </div>
     </div>
 </div>
-  <footer class="main_footer">
+<footer class="main_footer">
     <div class="foot_top">
       <div class="container">
         <div class="foot_top_row">
@@ -674,6 +674,15 @@
               <li><a href="https://workep.com/workep-for-education.html">For Education</a></li>
               <li><a href="https://workep.com/downloadapps.html">Download Apps</a></li>
             </ul>
+              <h4>Features</h4>
+            <ul class="links_all">
+                <li><a href="https://workep.com/time-tracker.html">Time traker</a></li>
+                <li><a href="https://workep.com/budget-tracker.html">Budget Traker</a></li>
+                <li><a href="https://workep.com/external-collaboration.html">External Collaboration</a></li>
+                <li><a href="https://workep.com/gantt-chart.html">Gantt Chart</a></li>
+                <li><a href="https://workep.com/voice-notes.html">Voice notes</a></li>
+                <li><a href="https://workep.com/gmail-add-on.html">Gmail Ad-on</a></li>
+            </ul>
           </div>
           <div class="foot3">
             <h4>Workep</h4>
@@ -683,6 +692,18 @@
               <li><a href="https://workep.com/partners.html">Partners</a></li>
               <!--<li><a href="#url">Press Kit</a></li>-->
             </ul>
+            <h4>Competitors</h4>
+            <ul class="links_all">
+                <li><a href="https://workep.com/competitors-airtable.html">Airtable</a></li>
+                <li><a href="https://workep.com/competitors-asana.html">Asana</a></li>
+                <li><a href="https://workep.com/competitors-basecamp.html">Basecamp</a></li>
+                <li><a href="https://workep.com/competitors-jira.html">Jira</a></li>
+                <li><a href="https://workep.com/competitors-monday.html">Monday</a></li>
+                <li><a href="https://workep.com/competitors-notion.html">Notion</a></li>
+                <li><a href="https://workep.com/competitors-smartsheet.html">Smartsheet</a></li>
+                <li><a href="https://workep.com/competitors-trello.html">Trello</a></li>
+                <li><a href="https://workep.com/competitors-wrike.html">Wrike</a></li>
+            </ul>  
           </div>
           <div class="foot4">
             <h4>Resources</h4>
@@ -698,6 +719,14 @@
               <li><a href="https://workep.com/privacy-policy.html">Privacy</a></li>
               <li><a href="https://workep.com/terms.html">Terms of Service</a></li>
             </ul>
+              <h4>Industry</h4>
+            <ul class="links_all">
+                <li><a href="https://workep.com/startups.html">Startup</a></li>
+                <li><a href="https://workep.com/law-firms.html">Law Firms</a></li>
+                <li><a href="https://workep.com/software-dev.html">Developer Dev</a></li>
+                <li><a href="https://workep.com/consulting.html">Consulting</a></li>
+                <li><a href="https://workep.com/marketing.html">Marketing</a></li>
+            </ul>
           </div>
           <div class="foot5">
             <h4>Contact</h4>
@@ -706,6 +735,7 @@
                <li><a href="mailto:service@workep.com?Subject=Hello%20Workep%20Team!"><img src="images/con_ic3.png" alt="E-mail"></a></li>
             </ul>
           </div>
+       
         </div>
       </div>
     </div>
@@ -740,11 +770,7 @@
       </div>
     </div>
   </footer>
-
-
-
-
-  	<!-- Jquery-->
+<!-- Jquery-->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="js/bootstrap.js"></script>
 <script src="js/slick.js"></script>
