--- a/competitors-airtable.html
+++ b/competitors-airtable.html
@@ -20,10 +20,6 @@
     <link rel="stylesheet" href="css/style.competitors.css">
  </head>
 <body>
-    
-
-
-
 <header class="main_head">
       <div class="container">
         <nav class="navbar navbar-expand-lg">
@@ -646,10 +642,8 @@
           </div>
         </div>
     </div>
-
 </div>
-
-  <footer class="main_footer">
+<footer class="main_footer">
     <div class="foot_top">
       <div class="container">
         <div class="foot_top_row">
@@ -676,9 +670,10 @@
               <h4>Features</h4>
             <ul class="links_all">
                 <li><a href="https://workep.com/time-tracker.html">Time traker</a></li>
-                <li><a href="https://workep.com//budget-tracker.html">Budget Traker</a></li>
+                <li><a href="https://workep.com/budget-tracker.html">Budget Traker</a></li>
                 <li><a href="https://workep.com/external-collaboration.html">External Collaboration</a></li>
                 <li><a href="https://workep.com/gantt-chart.html">Gantt Chart</a></li>
+                <li><a href="https://workep.com/voice-notes.html">Voice notes</a></li>
                 <li><a href="https://workep.com/gmail-add-on.html">Gmail Ad-on</a></li>
             </ul>
           </div>
